# AtareniumFalcon

./: CMakeLists.txt  README.md  TODO  credits.c  enum.h  game.c  gameover.c  guruMastah.c  intro.c  leakedGameOver.c  levels.h  lmcAce.c  main.c  menu.c  robbo.c  score.c  scoreAmi.c  structures.h  wungiel.c
res/: 1.txt  10.txt  11.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  ACEsfx.iff  AceSample.sfx  Atari.sfx  LadujWegiel.sfx  Morse_LMC8000.iff  Morse_LMC8000.sfx  amiHUD.pal  atarenium_falkon_pal.pal  cap11025.sfx  lmcpalette.pal  mod.falkon  (+4 more)
